updated about page

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ layout: default
         • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span>
       {%- endif -%}
     </p>
-    <p class="post-categories">
+    <p class="post-categories">Topics: 
   		{% if post %}
     		{% assign categories = post.categories %}
   		{% else %}
