Added Mastodon tracking meta

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,11 @@
 ---
 layout: default
 ---
+<meta property="fediverse:creator" content="@riotnrrd@mastodon.social" />
+<meta property="og:title" content="{{ page.title | escape }}" />
+<meta property="og:type" content="article" />
+<meta property="og:url" content="{{ page.url | absolute_url }}"  />
+
 <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
